# ledger-app-solar

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md
.doxygen/: Doxyfile
.github/workflows/: build_and_functional_tests.yml  ci-workflow.yml  coding_style_checks.yml  documentation_generation.yml  guidelines_enforcer.yml  lint-workflow.yml  misspellings_checks.yml  static_analysis.yml  unit_tests.yml
doc/: APDU.md  COMMANDS.md  TRANSACTION.md
doc/transactions/: TG01_T04_MULTISIGNATURE_REG.md  TG01_T05_IPFS.md  TG01_T06_TRANFER.md  TG01_T08_HTLC_LOCK.md  TG01_T09_HTLC_CLAIM.md  TG01_T10_HTLC_REFUND.md  TG02_T00_BURN.md  TG02_T02_VOTE.md
src/: address.c  address.h  app_main.c  constants.h  context.c  context.h  globals.h  io.c  main.c  sw.h  types.h
src/apdu/: dispatcher.c  dispatcher.h  parser.c
src/common/: base58.c  format.c  format.h  write.c
src/crypto/: crypto.c  crypto.h
src/handler/: get_address.c  get_address.h  get_app_name.c  get_public_key.c  get_public_key.h  get_version.c  sign_tx.c  sign_tx.h
src/helper/: send_reponse.c  send_response.c  send_response.h
src/transaction/: deserialise.c  deserialise.h  errors.h  transaction_utils.c  transaction_utils.h  types.h  utils.c  utils.h
src/transaction/types/: burn.c  burn.h  htlc_claim.c  htlc_claim.h  htlc_lock.c  htlc_lock.h  htlc_refund.c  htlc_refund.h  ipfs.c  ipfs.h  multi_signature_registration.c  multi_signature_registration.h  transfer.c  transfer.h  types.h  vote.c  vote.h
src/ui/: ctx.c  ctx.h  display.c  display.h  menu.c  ui_utils.c  ui_utils.h
src/ui/action/: validate.c  validate.h
src/ui/transactions/: burn_display.c  burn_display.h  htlc_claim_display.c  htlc_claim_display.h  htlc_lock_display.c  htlc_lock_display.h  htlc_refund_display.c  htlc_refund_display.h  ipfs_display.c  ipfs_display.h  multi_signature_registration_display.c  multi_signature_registration_display.h  transfer_display.c  transfer_display.h  vote_display.c  vote_display.h
tests/functional/: README.md  conftest.py  constants.py  requirements.txt  test_address_cmd.py  test_appname_cmd.py  test_error_cmd.py  test_message_sign_cmd.py  test_name_version.py  test_pubkey_cmd.py  test_sign_cmd.py  test_sign_message_cmd.py  test_sign_transaction_cmd.py  test_status_word.py  test_version_cmd.py  utils.py
tests/functional/application_client/: solar_command_sender.py  solar_response_unpacker.py  solar_transaction.py  solar_utils.py
tests/functional/client/: client_interface.py  cmd.py  cmd_builder.py  transaction.py  utils.py
tests/functional/client/exception/: __init__.py  device_exception.py  errors.py
tests/functional/transactions/: burn.py  htlc_claim.py  htlc_lock.py  htlc_refund.py  ipfs.py  multi_signature_registration.py  transfer.py  vote.py
tests/unit-tests/: CMakeLists.txt  README.md  nano_char_table.c  test_apdu_parser.c  test_format.c  test_tx_parser.c  test_tx_utils.c
